# cashflow

./: Cargo.toml  README.md  sample_data.csv
src/: app.rs  main.rs  utils.rs
src/model/: budget.rs  currency.rs  expense.rs  mod.rs
src/storage/: csv_store.rs  mod.rs
src/ui/: add_form.rs  dashboard.rs  expenses.rs  mod.rs  monthly.rs
