[package]
name = "cashflow"
version = "0.1.1"
edition = "2021"
description = "A terminal-based expense tracker built with Ratatui"
license = "MIT"
keywords = ["cli", "finance", "terminal", "tui", "expense"]
categories = ["command-line-utilities", "finance"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
unicode-width = "0.2"
anyhow = "1"
